Bug 516559 - Desktop stops reloading icons if desktop icons are deleted from Dolphin
Summary: Desktop stops reloading icons if desktop icons are deleted from Dolphin
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Folder View widget (other bugs)
Version First Reported In: 6.6.0
Platform: CachyOS Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL: https://discuss.kde.org/t/the-desktop...
Keywords: usability
: 517048 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-02-23 06:41 UTC by Fernando Marcelino Muniz
Modified: 2026-03-11 13:32 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.2
Sentry Crash Report:


Attachments
Issue in Plasma 6.6 (1.39 MB, video/x-matroska)
2026-02-23 06:41 UTC, Fernando Marcelino Muniz
Details
Desktop items stop appearing after being empty, only shows on dolphin (36 bytes, text/plain)
2026-02-25 12:53 UTC, s0ur2005
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fernando Marcelino Muniz 2026-02-23 06:41:48 UTC
Created attachment 189980 [details]
Issue in Plasma 6.6

STEPS TO REPRODUCE
1. Delete all items from the Desktop area.
2. Create an item on the Desktop area.

OBSERVED RESULT
The item is only shown on Dolphin, but not on the Desktop itself, which could mean that it crashed.

EXPECTED RESULT
The Desktop area should not crash after deleting or moving all items out of it's folder.

SOFTWARE/OS VERSIONS
Operating System: CachyOS Linux 
KDE Plasma Version: 6.6.0
KDE Frameworks Version: 6.23.0
Qt Version: 6.10.2
Kernel Version: 6.19.3-2-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 8 × 11th Gen Intel® Core™ i5-11300H @ 3.10GHz
Memory: 9 GB of RAM (8.1 GB usable)
Graphics Processor 1: Intel® Iris® Xe Graphics
Graphics Processor 2: NVIDIA GeForce GTX 1650
Manufacturer: LENOVO
Product Name: 82MG
System Version: IdeaPad Gaming 3 15IHU6

ADDITIONAL INFORMATION
Another user has this issue:
https://discuss.kde.org/t/the-desktop-stop-showing-desktop-items-if-all-items-are-moved-out-or-deleted/44577/4
Comment 1 Akseli Lahtinen 2026-02-23 10:07:14 UTC
Can confirm, though it doesn't seem to be a crash, the folder view that shows the desktop icons just stops reloading any icon changes for some reason.

Operating System: KDE Linux 2026-02-22
KDE Plasma Version: 6.6.80
KDE Frameworks Version: 6.24.0
Qt Version: 6.10.2
Kernel Version: 6.18.9-zen1-2-zen (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: AMD Radeon RX 6600
Comment 2 Fernando Marcelino Muniz 2026-02-25 02:47:51 UTC
Can confirm that this issue is also affecting Plasma 6.6.1

It makes the Desktop a pain to work with. It made me download heavy files multiple times before I figured out what was happening.
Comment 3 s0ur2005 2026-02-25 12:49:58 UTC
Same thing happening to me.  Desktop items stop appearing after being empty, only shows on dolphin. Restarting plasma works but as soon as desktop is empty again and you create a new file, it won't appear. The only workaroud for this is to keep always one file on desktop.
Comment 4 s0ur2005 2026-02-25 12:53:36 UTC
Created attachment 190093 [details]
Desktop items stop appearing after being empty, only shows on dolphin

Video showing exactly how to recreate the bug and what happens
Comment 5 s0ur2005 2026-02-25 12:56:16 UTC
(In reply to Fernando Marcelino Muniz from comment #0)
> Created attachment 189980 [details]
> Issue in Plasma 6.6
> 
> STEPS TO REPRODUCE
> 1. Delete all items from the Desktop area.
> 2. Create an item on the Desktop area.
> 
> OBSERVED RESULT
> The item is only shown on Dolphin, but not on the Desktop itself, which
> could mean that it crashed.
> 
> EXPECTED RESULT
> The Desktop area should not crash after deleting or moving all items out of
> it's folder.
> 
> SOFTWARE/OS VERSIONS
> Operating System: CachyOS Linux 
> KDE Plasma Version: 6.6.0
> KDE Frameworks Version: 6.23.0
> Qt Version: 6.10.2
> Kernel Version: 6.19.3-2-cachyos (64-bit)
> Graphics Platform: Wayland
> Processors: 8 × 11th Gen Intel® Core™ i5-11300H @ 3.10GHz
> Memory: 9 GB of RAM (8.1 GB usable)
> Graphics Processor 1: Intel® Iris® Xe Graphics
> Graphics Processor 2: NVIDIA GeForce GTX 1650
> Manufacturer: LENOVO
> Product Name: 82MG
> System Version: IdeaPad Gaming 3 15IHU6
> 
> ADDITIONAL INFORMATION
> Another user has this issue:
> https://discuss.kde.org/t/the-desktop-stop-showing-desktop-items-if-all-
> items-are-moved-out-or-deleted/44577/4

Exactly the same thing happening to me. Even on 6.6.1 updated last night on cachyOS.
Comment 6 Bug Janitor Service 2026-02-25 15:28:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3579
Comment 7 Akseli Lahtinen 2026-02-26 10:35:57 UTC
Git commit 1cb67184f89f25966d5566b289fe4230fabaa247 by Akseli Lahtinen.
Committed on 26/02/2026 at 09:03.
Pushed by akselmo into branch 'master'.

Positioner: Check if we need to defer applying positions during model conversion

When converting folderModelData, we should first check if we're
still listing or not, and apply that to the m_deferApplyPositions.

If we defer, we quit early as usual. If not, we set the defer off,
even when we do nothing: This allows any other methods to continue
loading items as normal.

Previously this was not properly reset, causing desktop not loading new
items after deleting any.
FIXED-IN: 6.6.2

M  +4    -8    containments/desktop/plugins/folder/positioner.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/1cb67184f89f25966d5566b289fe4230fabaa247
Comment 8 Akseli Lahtinen 2026-02-26 15:47:47 UTC
Git commit 8ef2e782af3b12e900096309c9e9fe9833476fab by Akseli Lahtinen.
Committed on 26/02/2026 at 11:51.
Pushed by akselmo into branch 'Plasma/6.6'.

Positioner: Check if we need to defer applying positions during model conversion

When converting folderModelData, we should first check if we're
still listing or not, and apply that to the m_deferApplyPositions.

If we defer, we quit early as usual. If not, we set the defer off,
even when we do nothing: This allows any other methods to continue
loading items as normal.

Previously this was not properly reset, causing desktop not loading new
items after deleting any.
FIXED-IN: 6.6.2


(cherry picked from commit 1cb67184f89f25966d5566b289fe4230fabaa247)

Co-authored-by: Akseli Lahtinen <akselmo@akselmo.dev>

M  +4    -8    containments/desktop/plugins/folder/positioner.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/8ef2e782af3b12e900096309c9e9fe9833476fab
Comment 9 Akseli Lahtinen 2026-03-04 09:29:08 UTC
*** Bug 517048 has been marked as a duplicate of this bug. ***