Positioner: Check if we need to defer applying positions during model conversion

When converting folderModelData, we should first check if we're
still listing or not, and apply that to the m_deferApplyPositions.

If we defer, we quit early as usual. If not, we set the defer off,
even when we do nothing: This allows any other methods to continue
loading items as normal.

Previously this was not properly reset, causing desktop not loading new
items after deleting any.

BUG: 516559
FIXED-IN: 6.6.2


(cherry picked from commit 1cb67184f89f25966d5566b289fe4230fabaa247)

Co-authored-by: Akseli Lahtinen <akselmo@akselmo.dev>